# The-Horde-RT-demo

./: .gitattributes  .gitignore  AGENTS.md  ASSET_LICENSES.md  CMakeLists.txt  PROJECT_DECISIONS.md  PROJECT_MEMORY.md  README.md
android/: README.md  gradle.properties  gradlew  gradlew.bat  settings.gradle
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_probe_bridge.cpp
android/app/src/main/java/com/samfa12/hordelanternrt/: MainActivity.java  ProbeBridge.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
assets/: README.md
assets/audio/: README.md
assets/models/: README.md
assets/models/enemies/meshy/: README.md  lich_placeholder_merged_animations_v01.METADATA.md  lich_placeholder_merged_animations_v01.glb  skeleton_biped_merged_animations_v01.METADATA.md  skeleton_biped_merged_animations_v01.glb
assets/models/props/meshy/: medieval_hand_torch_lod1_v01.glb  medieval_hand_torch_preview_v01.glb  medieval_hand_torch_v01.METADATA.md
assets/models/weapons/meshy/: README.md  gothic_arming_sword_rh_lod1.glb  gothic_arming_sword_rh_v01.METADATA.md  gothic_arming_sword_rh_v01.glb
assets/textures/: README.md
assets/textures/meshy/lich_placeholder_v01/: README.md  base-color-2048-astc6x6.ktx2  base-color-2048-rgba8.ktx2  emissive-2048-astc6x6.ktx2  emissive-2048-rgba8.ktx2
assets/textures/polyhaven/mobile_1k/: arm-array-512-astc6x6.ktx2  diff-array-512-astc6x6.ktx2  normal-array-512-astc4x4.ktx2
cmake/: HordeRtSources.cmake
docs/: ALPHA_ANDROID_PHONE_VALIDATION_2026-07-15.md  ALPHA_ANDROID_REFRESH_VALIDATION_2026-07-16.md  ALPHA_RELEASE_NOTES_2026-07-15.md  ALPHA_RELEASE_READINESS_2026-07-15.md  ALPHA_WINDOWS_VALIDATION_2026-07-15.md  ANDROID_RT_DEVICE_COMPATIBILITY_RECORD.md  ANDROID_SHOWCASE_AUTOMATION_2026-07-17.md  ANDROID_SHOWCASE_AUTOMATION_VALIDATION_2026-07-17.md  ASSET_PIPELINE.md  BUILD_TEST_DEMO_CYCLE_PLAN_2026-07-17.md  CODEBASE_AUDIT_2026-07-13.md  CODEX_NOTES.md  COLOURED_LIGHT_ROUTE_PLAN_2026-07-15.md  COMBAT_ASTC_PHONE_VALIDATION_2026-07-14.md  COMBAT_ASTC_SLICE_2026-07-13.md  DEVELOPER_OVERLAY_WINDOWS_VALIDATION_2026-07-17.md  DOCUMENTATION_CHECKPOINT_2026-07-17.md  FOUNDATION_VALIDATION_2026-07-22.md  HORDE_SHOWCASE_ANDROID_VALIDATION_2026-07-17.md  HORDE_SHOWCASE_WINDOWS_VALIDATION_2026-07-16.md  INSTALL_CHECKLIST.md  IN_APP_BENCHMARK_ANDROID_VALIDATION_2026-07-18.md  IN_APP_BENCHMARK_WINDOWS_VALIDATION_2026-07-17.md  MATERIAL_GALLERY_SLICE_2026-07-14.md  NATIVE_RT_SHOWCASE_PLAN_2026-07-14.md  PBR_MATERIAL_BATCH_2026-07-12.md  PHASE_1C_PHONE_VALIDATION_2026-07-11.md  PHASE_PLAN.md  PLAYER_BODY_RT_SLICE_2026-07-14.md  RTXPT_1_8_1_REFERENCE_AND_REGRESSION_GATES_2026-07-17.md  RT_LIGHTING_REFINEMENT_2026-07-12.md  RT_LIGHTING_SEAM_FIX_2026-07-13.md  SHARE_WITH_THE_DEV_EVIDENCE_COLLECTION_NOTE.md  SHOWCASE_ALPHA_0_1_2_RELEASE_VALIDATION_2026-07-22.md  SHOWCASE_ALPHA_RELEASE_NOTES_2026-07-17.md  SHOWCASE_ALPHA_RELEASE_NOTES_2026-07-22.md  SHOWCASE_ALPHA_RELEASE_VALIDATION_2026-07-17.md  SHOWCASE_ROUTE_BLOCKOUT_VALIDATION_2026-07-16.md  SKELETON_PERFORMANCE_2026-07-12.md  TECHNICAL_REQUIREMENTS.md  (+1 more)
docs/validation/android-showcase-automation-2026-07-17/: README.md  evidence-hashes.txt  state-evidence.json  timing.csv  vulkan_capability_report.json
docs/validation/horde-showcase-android-2026-07-17/: android_showcase_timing_100.csv  android_showcase_timing_75.csv  device-build.txt  install-launch-logcat.txt  private-runtime-files.txt  thermal-before-after.txt  vulkan-capability-report-75.txt
docs/validation/horde-showcase-windows-2026-07-16/: windows_showcase_timing.csv
release/: SAMFA12_SITE_COPY.md
release/windows/: README.txt
shaders/: README.md
shaders/raytracing/: README.md  minimal.rchit  minimal.rgen  minimal.rmiss
src/: README.md
src/app/: HordeLanternApp.cpp  HordeLanternApp.h  README.md
src/gameplay/: CorridorCollision.h  README.md  ShowcaseBenchmark.cpp  ShowcaseBenchmark.h  ShowcaseCheckpoints.h  ShowcaseGameplay.h  ShowcaseReplay.h  ShowcaseRoute.h  SpatialAudio.h  SwordCombat.h
src/platform/android/: AndroidManifest.xml  CapabilityProbeAndroidMain.cpp  README.md
src/platform/windows/: CapabilityProbeMain.cpp  DiagnosticWindow.cpp  DiagnosticWindow.h  DiagnosticWindowMain.cpp  HordeLanternRT.manifest  HordeLanternRT.rc  README.md
src/scene/: README.md  SkeletonBipedModel.cpp  SkeletonBipedModel.h
src/ui/: DiagnosticOverlay.cpp  DiagnosticOverlay.h  README.md
src/vulkan/: DeviceCapabilities.cpp  DeviceCapabilities.h  README.md  RtCapabilityReport.cpp  RtCapabilityReport.h  VulkanContext.cpp  VulkanContext.h
src/vulkan/raytracing/: AccelerationStructures.cpp  AccelerationStructures.h  MinimalRayGenShader.inc  PresentableTinyRtScene.cpp  PresentableTinyRtScene.h  README.md  RayTracingPipeline.cpp  RayTracingPipeline.h  RayTracingRequirements.cpp  RayTracingRequirements.h  ShaderBindingTable.cpp  ShaderBindingTable.h  TinyRtScene.cpp  TinyRtScene.h
tests/: DeveloperOverlaySmoke.cpp  ShowcaseBenchmarkSmoke.cpp  ShowcaseGameplaySmoke.cpp  ShowcaseRouteSmoke.cpp  SkinnedCharacterModelSmoke.cpp  SpatialAudioSmoke.cpp  SwordCombatSmoke.cpp
tools/: compare-foundation-captures.ps1  compile-material-textures.ps1  compile-raygen.ps1  create-android-release-key.ps1  import-filmcow-sfx.ps1  package-alpha.ps1  package-signed-alpha.ps1  prepare-lich-textures.ps1  push-alpha-to-itch.ps1  run-android-showcase-validation.ps1  run-foundation-validation.ps1
tools/capability_report/: README.md
